syntax = "proto3";

// Additional imports go here

package stt.service.v1;

option go_package = "github.com/shipherman/speech-to-text/gen/stt/service/v1;sttservice";

// STT service definition
service SttService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc TranscribeAudio(Audio) returns (stream Status) {}
    rpc GetHistory(User) returns (History) {}
}

message RegisterRequest {
    string username = 1;
    string email = 2; 
    string password = 3;
}

message RegisterResponse {
    int64 user_id = 1; // User ID of the registered user.
}

message LoginRequest {
    string email = 1; // Email of the user to login.
    string password = 2; // Password of the user to login.
}
  
message LoginResponse {
    string token = 1; // Auth token of the logged in user.
}

enum EnumStatus {
    STATUS_ACCEPTED = 0;
    STATUS_DECLINED = 1;
    STATUS_ORDERED = 2;
    STATUS_PROCESSING = 3;
    STATUS_DONE = 4;
}

message Status {
    EnumStatus status = 1;
}

message User {
    string name = 1;
    string email = 2;
}

message Audio {
    bytes audio = 1;
    string hash = 2;
}

message Text {
    string text = 1;
    uint32 len = 2;
}

message History {
    string data = 1;
    Text text = 2;
}